Added a tab on the introduction page

--- a/views/ng-templates/graphNavbar.ejs
+++ b/views/ng-templates/graphNavbar.ejs
@@ -62,7 +62,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="https://docs.google.com/forms/d/1gcaVGYNhoKEG-v5j42dNg-3nqG4WkJpFtxWAy1RYZ14/viewform" target="_blank"><b class="badge">SEND FEEDBACK</b></a></li>
-      <li><a href="http://omarcastro.github.io/ShellHive/docs/" target="_blank">Docs</a></li>
+      <li><a ng-click="status.tutorial = !status.tutorial">Help</a></li>
       <li>
         <a ng-click="chat.open = !chat.open">
           <span class="glyphicon glyphicon-user"></span> 
