--- a/views/ng-templates/tutorial.ejs
+++ b/views/ng-templates/tutorial.ejs
@@ -9,7 +9,12 @@
     This page was created due to the feedback received, so it is still "work in progress"
 </p><p>
     The next tab shows how to create and connect a command at the same time
-</p><p>
+</p>
+<p>
+  The next tab shows a short list of shotcuts that helps how to 
+  use the application
+</p>
+<p>
     To play the demo, click on "<i class="glyphicon glyphicon-play"></i> Play demo" tab
 </p>
     </pre>
@@ -25,6 +30,37 @@
       <!--img src="/images/tut-ccc-mouse-select.svg" style="top: 30vw; left: 128%; width: 30%"-->
       <!--img src="/images/tut-ccc-mouse-select.svg" style="top: 55vw; left: 128%; width: 30%"-->
 
+    </tab>
+    <tab heading="shortcuts">
+    <h3> Shortcut </h3>
+    This panel shows a list of keyboard shortcuts and simple instructions
+    that helps how to use the application <br><br>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3"><kbd>Alt</kbd> + mouse wheel:</div>
+        <div class="col-md-9"><b> Zoom in and out </b></div>
+      </div><br>
+      <div class="row">
+        <div class="col-md-3">Drag Mouse on empty space</div>
+        <div class="col-md-9"><b> drag the viewport </b></div>
+      </div><br>
+      <div class="row">
+        <div class="col-md-3"><kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>↑</kbd></div>
+        <div class="col-md-9"><b> Collapse all Components </b></div>
+      </div><br>
+      <div class="row">
+        <div class="col-md-3"><kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>↓</kbd></div>
+        <div class="col-md-9"><b> Uncollapse all Components </b></div>
+      </div><br>
+      <div class="row">
+        <div class="col-md-3"><kbd>Shift</kbd>+<kbd>S</kbd></div>
+        <div class="col-md-9"><b> Toggle Shell View </b></div>
+      </div><br>
+      <div class="row">
+        <div class="col-md-3"><kbd>Shift</kbd>+<kbd>F</kbd></div>
+        <div class="col-md-9"><b> View FileSystem </b></div>
+      </div>
+      </div>
     </tab>
     <tab select="status.tutorial = true">
       <tab-heading>
