improved interface for 720p

--- a/views/ng-templates/graphNavbar.ejs
+++ b/views/ng-templates/graphNavbar.ejs
@@ -81,12 +81,9 @@
         <li><a href="/logout">Logout</a></li>
 
       <% } else { %>
-        <li><a> Anonymous Visitor </a></li>
+        <li><a>Visitor</a></li>
         <li><a class="glyphicon glyphicon-user user-icon"></a></li>
-
       <% } %>
-    
-
     </ul>
   </div>
 </div>
