--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -105,7 +105,12 @@ kbd{
   right: 0;
   top: 50px;
   bottom: 0 ;
-  width: 20%;
+  width: 16em;
+  border-left: solid 2px #ccc;
+  hr{
+    height : 2px;
+    background-color: #ccc;
+  }
   .close{
     position: absolute;
     right: 0;  
