--- a/views/ng-templates/graphTemplate.ejs
+++ b/views/ng-templates/graphTemplate.ejs
@@ -38,7 +38,7 @@
 
 <div class="chat" ng-if="chat.open">
   <button type="button" class="close" ng-click="chat.open = false" aria-hidden="true">&times;</button>
-  <div style="overflow:auto; height:30%">
+  <div style="overflow:auto; padding-top: 1em; height:30%">
   <div ng-repeat="c in clients track by c.id">
     <b ng-style="{color:c.color}" ng-bind="c.name"></b>
   </div>
