enable wc command on parser, improve tutorial interface

--- a/assets/styles/graph.less
+++ b/assets/styles/graph.less
@@ -173,7 +173,8 @@ div[graph]{
 
 .tutorial-panel{
     background-color: #eee;
-  z-index:2040;
+    z-index:2040;
+    &.top{top: 0;}
     p{
         padding-left: 2em;
         font-weight: bold;
@@ -184,7 +185,7 @@ div[graph]{
         position: absolute;
         left: 0;
         right: 0;
-        top: 42px;
+        top: 44px;
         bottom: 0;
 
     }
