added create node page, changed componet to node, fixed ls generation typo, added button state on filesystem, removed button group an input and output type of nodes, improved macro command generation

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -68,6 +68,10 @@
   text-align: right;
 }
 
+.align-center{
+  text-align: center;
+}
+
 .terminal{
   text-align: left;
   display: inline-block;
@@ -125,7 +129,42 @@ kbd{
 }
 
 
+.tutorial-panel{
+    background-color: #eee;
+    z-index:2040;
+    &.top{top: 0;}
+    > div, .tab-content{
+        width: 100%;
+        height: 100%;
+    }
 
+    .figure{
+      text-align: center;
+      font-style: italic;
+    }
+    
+    p{
+        margin: 1em;
+    }
+    .bigger-text p{
+        padding-left: 2em;
+        font-weight: bold;
+        font-size: 1.5em;
+    }
+    .tab-pane{
+        overflow: auto;
+        position: relative;
+        height: 100%;
+        right: 0;
+    //    top: 44px;
+    //    bottom: 0;
+
+    }
+    img{
+        border: 2px solid #7a7;
+        border-radius: 2px;
+    }
+}
 
 
 
