updated introduction page

--- a/views/ng-templates/tutorial.ejs
+++ b/views/ng-templates/tutorial.ejs
@@ -8,14 +8,7 @@
           Before playing the demo there are some instructions on how to use the application.
         </p>
         <p>
-          This page was created due to the feedback received, so it is still "work in progress"
-        </p>
-        <p>
-          The next tab shows how to create and connect a command at the same time
-        </p>
-        <p>
-          The next tab shows a short list of shotcuts that helps how to 
-          use the application
+          These pages were created due to the feedback received, so it is still "work in progress".
         </p>
         <p>
           To play the demo, click on "<i class="glyphicon glyphicon-play"></i> Play demo" tab
