added instructions on execution of commands

--- a/views/ng-templates/tutorial.ejs
+++ b/views/ng-templates/tutorial.ejs
@@ -184,6 +184,25 @@
         the desktop, or by using the buttons on the bottom rigth corner of the filesystem view.
       </p>
     </tab>
+
+    <tab heading="Compiling and running workflows">
+      <%-:"Compiling and running workflows \n\
+====== \n\
+Here we will explain how to compile the graph and to execute the commands \n\
+## Compiling workflows \n\n\
+to compile the workflow you just need to open the UNIX terminal view \n\
+by using clicking <kbd>Shift</kbd>+<kbd>S</kbd> or by clicking \n\
+on the Action menu like the figure below. \n\
+## Executing workflows \n\n\
+to execute a workflow you just click on the \"Run\" button on the top menu" | md -%>
+
+<div class="figure">
+  <img width="60%" src="//omarcastro.github.com/ShellHive/docs/tutorial/compileExec/view-terminal.svg">
+  <div>The action menu. The "Run" button is in the top right corner of the picture.  </div>
+</div>
+
+    </tab>
+
     <tab heading="shortcuts">
       <h3> Shortcut </h3>
       This panel shows a list of keyboard shortcuts and simple instructions
