--- a/views/ng-templates/Component.ejs
+++ b/views/ng-templates/Component.ejs
@@ -76,7 +76,9 @@
     </div>
   </div>
   
-  <div ng-switch-when="command">    
+  <div ng-switch-when="command">   
+
+
     <div ng-if="data.files !== undefined && (!collapsed || data.files.length)">files :<br ng-if="data.files.length > 0">
       <div ng-repeat="file in data.files track by $index">
         <span data-port="file{{$index}}">
@@ -100,15 +102,27 @@
       <textarea parameter-field type="text" ng-model="data.script"></textarea>
     </div>
     
+
+
+
     
     <div ng-if="data.parameters">
-      <div ng-repeat="(name, option) in data.parameters track by name">
-        <div class="input-group input-group-sm"><span ng-bind="name" class="input-group-addon"></span>
-          <input parameter-field type="text" ng-model="data.parameters[name]" class="form-control">
+      <form name="myForm" ng-repeat="(name, option) in data.parameters track by name">
+        <div ng-class="{'has-error': myForm.field.$invalid}" class="input-group input-group-sm">
+          <label ng-bind="name" class="input-group-addon"></label>
+          <input type="text" name="field" ng-model="data.parameters[name]" 
+                 ng-if="data.exec == 'curl' && name!='url'" size="4" class="form-control">
+          <input type="text" name="field" ng-model="data.parameters[name]" 
+                 ng-if="data.exec != 'curl' || name=='url'" class="form-control">
         </div>
-      </div>
+      </form>
     </div>
     
+
+
+
+
+
     
     <div ng-if="data.exec == 'grep'">
       <div>
@@ -117,6 +131,8 @@
         </label><br>
       </div>
     </div>
+
+
     <div ng-if="isImplemented(data) &amp;&amp; data.selectors">
       <form name="myForm" ng-repeat="(name, option) in data.selectors track by name">
         <div ng-class="{'has-error': myForm.field.$invalid}" class="input-group input-group-sm">
@@ -133,6 +149,8 @@
         </div>
       </form>
     </div>
+
+
     <div>
       <span ng-repeat="(name, val) in data.flags track by name" ng-click="data.flags[name] = !val;$emit('updateComponent',data)" ng-if="!collapsed || data.flags[name]">
         <label ng-class="(val)?'glyphicon-check':'glyphicon-unchecked'" class="glyphicon"></label>
