--- a/views/ng-templates/tutorial.ejs
+++ b/views/ng-templates/tutorial.ejs
@@ -5,11 +5,18 @@
 
         <h2>Hello Visitor!</h2>
         <p>
-          Before playing the demo there are some instructions on how to use the application.
+          
+          I am doing a dissertation, which objective is to simplify the creation and management of Unix Shell (SH) scripts, transforming the text script in a visual graph, which its focus is the processing of large amounts of data (in short, to do Big Data related tasks)
         </p>
         <p>
-          These pages were created due to the feedback received, so it is still "work in progress".
+	It also tries to simplify other things such as sharing and
+	 collaborating the graphs with other people, so that is easier to understand
+	 for people with high and low experience with SH scripts (such as trainees),
+	 it can also be used to teach other people how to write those scripts.
         </p>
+	<p style="color:red"> Before playing the demo please read the manual 
+	(tabs on the left above "Play demo"), which allows to give you
+	basic information on how to use the application
         <p>
           To play the demo, click on "<i class="glyphicon glyphicon-play"></i> Play demo" tab
         </p>
