--- a/views/ng-templates/Component.ejs
+++ b/views/ng-templates/Component.ejs
@@ -110,9 +110,9 @@
       <form name="myForm" ng-repeat="(name, option) in data.parameters track by name">
         <div ng-class="{'has-error': myForm.field.$invalid}" class="input-group input-group-sm">
           <label ng-bind="name" class="input-group-addon"></label>
-          <input type="text" name="field" ng-model="data.parameters[name]" 
+          <input parameter-field type="text" name="field" ng-model="data.parameters[name]" 
                  ng-if="data.exec == 'curl' && name!='url'" size="4" class="form-control">
-          <input type="text" name="field" ng-model="data.parameters[name]" 
+          <input parameter-field type="text" name="field" ng-model="data.parameters[name]" 
                  ng-if="data.exec != 'curl' || name=='url'" class="form-control">
         </div>
       </form>
