--- a/views/ng-templates/tutorial.ejs
+++ b/views/ng-templates/tutorial.ejs
@@ -23,11 +23,11 @@
       </div>
 
     </tab>
-    <tab heading="Create nodes">
-      <h2> Creating and connecting nodes </h2>
+    <tab heading="Create components">
+      <h2> Create components </h2>
 
       <p>
-        You have two ways to create a node, using the top menu, or
+        You have two ways to create a component, using the top menu, or
         creating and connecting at the same time, which is explained on the next page.
       </p>
       <div class="figure">
@@ -35,31 +35,31 @@
         <div>dropdown menu which shows a list of available commands</div>
       </div>
       <p>
-        By creating the node using the menu they will be created at the top left of the
+        By creating the component using the menu they will be created at the top left of the
         view.
       </p>
       <p>
-        For now you can only create command nodes using the top menu, to create
-        file nodes, refer to the "Create & connect nodes" page
+        For now you can only create command components using the top menu, to create
+        file components, refer to the "Create & connect components" page
       </p>
     </tab>
-    <tab heading="Create & connect nodes">
+    <tab heading="Create & connect components">
 
-      <h2> Creating and connecting nodes </h2>
+      <h2> Create and connect components </h2>
 
       <p>
-        This page contains information on how to create and connect an node
-        it will begin with an intial step to create a popup to create any kind of node
+        This page contains information on how to create and connect an component
+        it will begin with an intial step to create a popup to create any kind of component
         and connect it automatically
       </p>
 
       <h3> Initial steps </h3>
 
       <p>
-        To add and connect a node at the same time you start by
+        To add and connect a component at the same time you start by
         moving your mouse to a "port".
-        A port is where the input and output of a node is, and
-        it allows to connect a node to another one.
+        A port is where the input and output of a component is, and
+        it allows to connect a component to another one.
       </p>
       <div class="figure">
         <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/hover.svg">
@@ -96,7 +96,7 @@
           </div>
 
           <p>
-            And the node is created
+            And the component is created
           </p>
 
           <div class="figure">
@@ -109,7 +109,7 @@
             <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/simple-grep.svg">
           </div> 
           <p>
-            And the node is created
+            And the component is created
           </p>
           <div class="figure">
             <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/simple-grep-complete.svg">
@@ -131,17 +131,17 @@
           </div>       
         </tab>
 
-        <tab heading="Using key (file node)">
+        <tab heading="Using key (file component)">
           <p>
             Write in the box the name of the file with the file extension, just having a dot in
-            the text will tell that the node to be created is a file
+            the text will tell that the component to be created is a file
           </p>
           <div class="figure">
             <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/file.svg">
           </div> 
 
           <p>
-            And the file node is created with the choosen name
+            And the file component is created with the choosen name
           </p>
           <div class="figure">
             <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/file-complete.svg">
@@ -150,7 +150,7 @@
       </tabset>
 
     </tab>
-    <tab heading="File system">
+    <tab heading="Using the file system">
       <h2> Using the file system </h2>
 
       <p>
