added 'uniq' command improved interface to connect commands, added missing interfaces on some commands

--- a/views/ng-templates/popupArea.ejs
+++ b/views/ng-templates/popupArea.ejs
@@ -1,5 +1,5 @@
 <div class="popupArea">
-  <div class="popup dropdown open">
+  <div class="create-component-popup dropdown open">
     <ul class="dropdown-menu well">
       <form ng:submit="graph.popupSubmit(popupText)">
         <div class="input-group input-group-sm"><span class="input-group-addon glyphicon glyphicon-tasks"></span>
