--- a/assets/styles/graph.less
+++ b/assets/styles/graph.less
@@ -158,7 +158,7 @@ div[graph]{
         top:0;
     }
 }
-.popup,.selectpopup {
+.create-component-popup,.selectpopup {
     position:absolute;
     top:50px;
     left:0;
@@ -188,9 +188,14 @@ div[graph]{
     }
 }
     
-.popup a {
-    padding-top:0;
-    padding-bottom:0;
+.create-component-popup{
+    a {
+        padding-top:0;
+        padding-bottom:0;
+    }
+    &.left-side > ul{
+        transform: translate(-100%)
+    }
 }
 .graph {
     position:fixed;
