--- a/views/ng-templates/Component.ejs
+++ b/views/ng-templates/Component.ejs
@@ -1,6 +1,7 @@
 <div component ng-repeat="data in visualData.components track by data.id" ng-switch on='data.type' data-node-id="{{data.id}}" ng-style="{transform:transform, WebkitTransform:transform, MsTransform:transform}" class="{{data.type}}-component component">
 
-    <div title="{{title.desc}}" class="title">
+    <div class="tip title">
+      <div class="tooltip"> Drag me to move me! </div>
       <span class="title-name" ng-bind="title.name"></span>
       <span class="button-group" ng-if="title.buttons">
         <a ng-click="togglecollapse()" 
@@ -19,8 +20,17 @@
         </div>
       </div>
       <div class="output">
-        <div data-port="{{port.name}}" ng-repeat="port in outputPorts">        
+        <div class="tip" data-port="{{port.name}}" ng-repeat="port in outputPorts"> 
           <span class="text" ng-bind="port.text"></span>
+          <span class="relative">
+              <div class="tooltip"> 
+
+            Drag me to create a pipe.
+            <br>Drop it on an empty space to
+           create and connect to a new component.
+            <br>Drop me above above one of us
+            to connect to another component! </div>
+          </span>
           <span class="box"></span>
         </div>
       </div>
